<resources>
    <!-- Banner Ad IDs -->
    <string name="banner_1" translatable="false">ca-app-pub-1517962596069817/6783657395</string>
    <!-- Test ID -->
<!--    <string name="banner_1">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="app_name">Lanka News</string>
    <string name="select_your_language">Pick a Language</string>
    <string name="lang_sinhala">සිංහල</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="lang_english">English</string>
    <string name="news_cover_image">News cover image</string>
    <string name="play_icon">Indicator news contains video</string>
    <string name="search">Search</string>
    <string name="feedback">Feedback</string>
    <string name="understood">Understood</string>
    <string name="looking_for_a_news">Looking for a news…</string>
    <string name="no_news_found">No news found</string>
    <string name="email">hi@spidy.app</string>
    <string name="bookmark">Bookmark</string>
    <string name="text_size">Text Size</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="others">Others</string>
    <string name="share">Share…</string>
</resources>